once end, of development (del twitter link / hide appendix / add contact / disable overflow scroll bar / etc)

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -13,7 +13,7 @@
     "project_id": "2",
     "title": "Pattiserie Mon Chat",
     "url":"https://ucntkhr.github.io/bootstrap_01/",
-    "desc": "Bootstrapを学ぶ為に作成した洋菓子店Webサイト風のページです（もっと改良したい）",
+    "desc": "Bootstrapを学ぶ為に作成した架空の洋菓子店Webページです（改良中）",
     "status": "done",
     "stat_color": "is-info"
   },
